--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ ul li a:hover {
         </div>
         <div class="terminal-menu">
             <ul>
-                <li><a href="#">About Me</a></li>
+                <li><a href="page2.html">About Me</a></li>
                 <li><a href="#">My Projects</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
