--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="inner.css">
 <link rel="stylesheet" href="contact.css">
 <body>
-<a>[Github]</a>|<a>[LinkedIn]</a>
+<a>[Github]</a>|<a>[LinkedIn]</a>|<a>[Email]</a>
 </body>
