--- a/home.html
+++ b/home.html
@@ -1,52 +1,38 @@
             <link rel="stylesheet" href="inner.css">
             <link rel="stylesheet" href="home.css">
             <body>
-            <p>Welcome to My Portfolio</p>
-            <p>$ About Me</p>
-            <p>Hi, I'm [Your Name], a passionate programmer with expertise in [Your Skills]. I love creating web applications and solving complex problems.</p>
-            <p>$ My Projects</p>
-            <ul class="projectList">
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
-                <li>+ <a href="#">Project 1 - Description</a></li>
-                <li>+ <a href="#">Project 2 - Description</a></li>
-                <li>+ <a href="#">Project 3 - Description</a></li>
+            <h3>$helloWorld!</h3>
+            <p>Welcome to my portfolio! I am an aspiring software developer who is passionate about learning and building exciting projects in the world of technology. While I may not have professional experience, I am enthusiastic about sharing my journey and showcasing my skills as I embark on this exciting career path.</p>
 
-                <!--  Add more projects here as needed -->
-            </ul>
-            <p>$ Contact Me</p>
-            <p>You can reach me at [Your Email Address].</p>
+            <h3>$myJourney</h3>
+            <p>My love for coding and problem-solving led me to pursue a career in software development. I am self-taught and have dedicated countless hours to honing my skills in various programming languages and technologies. I firmly believe that persistence and a hunger for knowledge are my greatest assets.</p>
+
+            <h3>$mySkills</h3>
+<p>Although I'm at the beginning of my career, I have acquired a solid foundation in:
+    <ul class="custom-list">
+
+                <li>Programming Languages: Proficiency in languages like Python, JavaScript, and Java.</li>
+                <li>Web Development: Building responsive and user-friendly websites using HTML, CSS, and JavaScript.</li>
+                <li>Basic Algorithms and Data Structures: Understanding fundamental concepts that are the building blocks of software development.</li>
+                <li>Version Control: Using tools like Git to collaborate and manage code.</li>
+                </ul>
+</p>
+            <h3>$myProjects</h3>
+<p>One of the best ways to learn and grow is by doing. I have completed several personal projects that demonstrate my abilities and dedication to this field. Some of my best projects include:
+<ul class="custom-list">
+                <li>[<a href="pro-fluidos.html">FluidOs</a>]:  A web based operating system made using Python flask and autobahn websocket system.</li>
+                <li>[<a href="pro-untitledGame.html">Strategy Game</a>]: A 2D multiplayer strategy game currently in development.</li>
+                <li>[<a href="pro-mineOfDuty.html">Mine Of Duty</a>]: A Minecraft themed shooting game made using Java AWT framework.</li>
+                </ul>
+            [<a href="projects.html">Click here</a>] to see the full list of projects I have worked on.
+</p>
+<h3>$myFuture</h3>
+<p>I am eager to take the next step in my software development journey. I am actively seeking opportunities for internships, collaborations, and mentorship to gain practical experience and continue learning from seasoned professionals. I am also open to contributing to open-source projects to give back to the developer community.
+</p>
+<h3>$letsConnect</h3>
+<p>If you are an experienced developer, a recruiter, or anyone passionate about technology, I'd love to connect with you. I am excited about the possibilities that lie ahead and am open to any advice, guidance, or opportunities you can offer.
+
+Thank you for visiting my portfolio, and I look forward to sharing my growth and accomplishments as I take my first steps in the world of software development!</p>
             <!-- Add more content or sections as needed -->
             <br>
             <br>
