--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Anonyo | Portfolio</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div class="terminal-menu">
             <ul>
                 <li onclick="document.getElementById('page').src='home.html'">About Me</li>
-                <li>My Projects</li>
+                <li onclick="document.getElementById('page').src='projects.html'">My Projects</li>
                 <li onclick="document.getElementById('page').src='contact.html'">Contact Me</li>
             </ul>
         </div>
