--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <li><a href="pro-Pend-sim.html">Pendulum Simulator</a></li>
     <li><a href="pro-Traj-sim.html">Trajectory Simulator</a></li>
     <li><a href="pro-sin.html">My Sin</a></li>
-    <li><a href="pro-preceptron.html">My Sin</a></li>
+    <li><a href="pro-preceptron.html">Perceptron</a></li>
     <li><a href="pro-Naive-Bayes.html">Naive-Bayes</a></li>
     <li><a href="pro-KnapSack.html">KnapSack</a></li>
     <li><a href="pro-K-means.html">K-means</a></li>
