--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,10 @@
     <li><a href="pro-KnapSack.html">KnapSack</a></li>
     <li><a href="pro-K-means.html">K-means</a></li>
     <li><a href="pro-Knn.html">Knn</a></li>
+    <li><a href="pro-WeatherApp.html">Weather App</a></li>
+    <li><a href="pro-Dijkstra-Subnetting.html">Dijkstra and Subnetting</a></li>
+    <li><a href="pro-covindia.html">Covindia</a></li>
+    <li><a href="pro-spiralEncryption.html">Spiral Encryption</a></li>
 </ul>
             <br>
             <br>
