--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
         </div>
     </div>
+    <br>
+    <div class="footer">
+        <p>&copy; 2023 Anonyo Mitra </p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
