--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,13 @@
 <link rel="stylesheet" href="inner.css">
 <link rel="stylesheet" href="contact.css">
-<body>
+<script src="pointerAnimation.js"></script>
+<body onload="startPointerAnimation()">
 <h3>$contact</h3>
 <p>[<a href="https://github.com/anonyosmitra" target="_blank">Github</a>]|[<a href="https://www.linkedin.com/in/anonyo-shanker-mitra-77466b19a/" target="_blank">LinkedIn</a>]|[<a href="mailto:anonyos.mitra@gmail.com">Email</a>]<br></p>
 
     <ul class="custom-list">#Phone:
 <li>US: <a href="tel:+13602092042">+1 360 209 2042</a></li>
-<li>PL: <a href="tel:+48692425069">+48 692 425 069</a></li>
+<li>PL: <a href="tel:+48692425069">+48 692 425 069</a><snap id="pointAnime"></snap></li>
     </ul>
 
 <br>
