--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
             <link rel="stylesheet" href="inner.css">
             <link rel="stylesheet" href="home.css">
-            <body>
+            <script src="pointerAnimation.js"></script>
+            <body onload="startPointerAnimation()">
             <h3>$helloWorld!</h3>
             <p>Welcome to my portfolio! I am an aspiring software developer who is passionate about learning and building exciting projects in the world of technology. While I may not have professional experience, I am enthusiastic about sharing my journey and showcasing my skills as I embark on this exciting career path.</p>
 
@@ -32,12 +33,11 @@
 <h3>$letsConnect</h3>
 <p>If you are an experienced developer, a recruiter, or anyone passionate about technology, I'd love to connect with you. I am excited about the possibilities that lie ahead and am open to any advice, guidance, or opportunities you can offer.
 
-Thank you for visiting my portfolio, and I look forward to sharing my growth and accomplishments as I take my first steps in the world of software development!</p>
+Thank you for visiting my portfolio, and I look forward to sharing my growth and accomplishments as I take my first steps in the world of software development!<snap id="pointAnime"></snap></p>
             <!-- Add more content or sections as needed -->
             <br>
             <br>
             <br>
             <br>
             <br>
-
             </body>
