--- a/pro-gameOfLife.html
+++ b/pro-gameOfLife.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
+<script src="pointerAnimation.js"></script>
 <body>
 <h3>$Game of life</h3>
             <p>
