--- a/pro-covindia.html
+++ b/pro-covindia.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
-<body>
+<script src="pointerAnimation.js"></script>
+<body onload="startPointerAnimation()">
 <h3>$Covindia</h3>
             <p>
       Covindia was a web application created as an emergency resource during the 2020 Covid Pandemic in India as a database for available emergency resources (hospital beds, oxygen tanks, ventilators, medications, etc.) for cities across India. In a 2 months run time the app served over 30,000 queries for desperately needed medical supplies.
@@ -9,7 +10,7 @@
   Status: Terminated
 </p>
 <p>
-    URL:[<a href="https://github.com/anonyosmitra/covindia" target="_blank">source</a>]
+    URL:[<a href="https://github.com/anonyosmitra/covindia" target="_blank">source</a>]<snap id="pointAnime"></snap>
             </p>
 
 
