--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="inner.css">
 <link rel="stylesheet" href="projects.css">
+<script src="pointerAnimation.js"></script>
 <body>
 <h3>$projects</h3>
 <ul class="custom-list">
@@ -27,5 +28,7 @@
             <br>
             <br>
             <br>
+            <br>
+<br>
             <br>
 </body>
