--- a/pro-CreatureBattleGame.html
+++ b/pro-CreatureBattleGame.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Creature Battle Gamey</h3>
             <p>
                 A [<a href="https://en.wikipedia.org/wiki/Pok%C3%A9mon_Red,_Blue,_and_Yellow" target="_blank">Pok&eacute;mon</a>] based command line only game made using C++. This was made as a college project.
