--- a/pro-Dijkstra-Subnetting.html
+++ b/pro-Dijkstra-Subnetting.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Dijkstra and Subnetting</h3>
             <p>
                 Programs for mapping Dijkstra routes and calculating efficient subnetting systems.            </p>
