--- a/pro-K-means.html
+++ b/pro-K-means.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$K-Means</h3>
             <p>
                 A Machine Learning program to classify items into a given number of catarogies based of their common attributes. This was made as a college project.
