--- a/pro-KnapSack.html
+++ b/pro-KnapSack.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$KnapSack</h3>
             <p>
                 An AI model to determine the most efficient selection of items from a collection. This was made as a college project.
