--- a/pro-Naive-Bayes.html
+++ b/pro-Naive-Bayes.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Naive-Bayes</h3>
             <p>
                 A Machine Learning classifier model made in python to calculate the probability of an event occurring based on past events. This was made as a college project.
