--- a/pro-WeatherApp.html
+++ b/pro-WeatherApp.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$pro-WeatherApp.html</h3>
             <p>
                 A Python FastAPI web application that presents weather forcast for selected locations for users. This was made as a college project.
