--- a/pro-fluidos.html
+++ b/pro-fluidos.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$fluidOs</h3>
             <p>
                 Fluidos is a web based operating system made using python flask and autobahn websocket system. It is an interfaces that allows communication between multiple apis. it uses a mysql database. Accounts can be made for private individuals or organisation staff members giving them access to shared data with assigned permissions.<p>
