--- a/pro-gameOfLife.html
+++ b/pro-gameOfLife.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Game of life</h3>
             <p>
                 A recreation of Conway's [<a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life" target="_blank">Game of Life</a>] using HTML and Javascript. This was made as a college project.
