--- a/pro-preceptron.html
+++ b/pro-preceptron.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Perceptron</h3>
             <p>
                 A Perceptron program created in python to learn the attributes for flowers and use it to categorize other flowers. This was made as a college project.
