--- a/pro-sin.html
+++ b/pro-sin.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$My Sin</h3>
             <p>
                 A Python program to calculate the sin of a given number using [<a href="https://en.wikipedia.org/wiki/Taylor_series" target="_blank">Taylor Series</a>]. This was made as a college project.
