--- a/pro-spiralEncryption.html
+++ b/pro-spiralEncryption.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Spiral Encryption</h3>
             <p>
                 Program for encrypting text using a password.            </p>
