--- a/pro-stringEq.html
+++ b/pro-stringEq.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$String Equation</h3>
             <p>
                 A string equating simulator made using python. This was made as a college project.
