--- a/pro-Knn.html
+++ b/pro-Knn.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Knn</h3>
             <p>
                 A Machine Learning program to split a dataset into 2 categories based of the given attributes. This was made as a college project.
