--- a/pro-L-System-Sim.html
+++ b/pro-L-System-Sim.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$L-System Simulation</h3>
             <p>
                 Rendering of a leaf using [<a href="https://en.wikipedia.org/wiki/L-system" target="_blank">L-system simulation</a>]. Created in python.
