--- a/pro-Pend-sim.html
+++ b/pro-Pend-sim.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Pendulum Simulator</h3>
             <p>
                 A Python program to graph the movement of a pendulum using [<a href="https://en.wikipedia.org/wiki/Heun%27s_method" target="_blank">Improved Euler</a>] and [<a href="https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods" target="_blank">RK4</a>] methods. This was made as a college project.
