--- a/pro-earth-moon-sim.html
+++ b/pro-earth-moon-sim.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Earth-Moon Model Simulator</h3>
             <p>
                 A Python program to simulate and graph the revolution of earth around the sun and the revolution of the moon around earth using [<a href="https://en.wikipedia.org/wiki/Heun%27s_method" target="_blank">Improved Euler Method</a>]. This was made as a college project.
