--- a/pro-mineOfDuty.html
+++ b/pro-mineOfDuty.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Mine of Duty</h3>
             <p>
                 A [<a href="https://www.minecraft.net" target="_blank">Minecraft</a>] themed shooting game made using Java AWT framework. This was made as a college project.
