--- a/pro-roll-sim.html
+++ b/pro-roll-sim.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="./inner.css">
 <link rel="stylesheet" href="./projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$Rolling Simulator</h3>
             <p>
                 A Python program to simulate the movement of a cylindrical object rolling down an inclined plain using [<a href="https://en.wikipedia.org/wiki/Heun%27s_method" target="_blank">Improved Euler Method</a>]. This was made as a college project.
