--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="inner.css">
 <link rel="stylesheet" href="projects.css">
 <script src="pointerAnimation.js"></script>
-<body>
+<body onload="startPointerAnimation()">
 <h3>$projects</h3>
 <ul class="custom-list">
     <li><a href="pro-fluidos.html">FluidOs</a></li>
