--- a/pro-fluidos.html
+++ b/pro-fluidos.html
@@ -6,7 +6,7 @@
             <p>
                 Fluidos is a web based operating system made using python flask and autobahn websocket system. It is an interfaces that allows communication between multiple apis. it uses a mysql database. Accounts can be made for private individuals or organisation staff members giving them access to shared data with assigned permissions.<p>
 <p>Status: Production</p>
-<p>URL:<a href="https://fluidos.anonyo.net" target="_blank">fluidos.anonyo.net</a>
+<p>URL:<a href="https://fluidos.anonyo.net" target="_blank">fluidos.anonyo.net</a><snap id="pointAnime"></snap>
             </p>
 
 
