--- a/pro-untitledGame.html
+++ b/pro-untitledGame.html
@@ -9,7 +9,7 @@
 
 <p>Status: Development</p>
 <p>
-    URLs:[<a href="https://github.com/anonyosmitra/Untitled-Game" target="_blank">source</a>]|[<a href="https://fluidos.anonyo.net:8000/" target="_blank">preview</a>]
+    URLs:[<a href="https://github.com/anonyosmitra/Untitled-Game" target="_blank">source</a>]|[<a href="https://fluidos.anonyo.net:8000/" target="_blank">preview</a>]<snap id="pointAnime"></snap>
             </p>
 
 
