--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     <li><a href="pro-WeatherApp.html">Weather App</a></li>
     <li><a href="pro-Dijkstra-Subnetting.html">Dijkstra and Subnetting</a></li>
     <li><a href="pro-covindia.html">Covindia</a></li>
-    <li><a href="pro-spiralEncryption.html">Spiral Encryption</a></li>
+    <li><a href="pro-spiralEncryption.html">Spiral Encryption</a><snap id="pointAnime"></snap></li>
 </ul>
             <br>
             <br>
