--- a/bgtest.html
+++ b/bgtest.html
@@ -1,7 +1,32 @@
-body {
-    overflow: hidden; /* Hide scrollbar */
-    background-image: url('sad.jpg');
-    background-size: cover; /* Cover the entire viewport */
-    background-position: center center; /* Center the background image both horizontally and vertically */
-    background-attachment: fixed; /* Keep the background fixed while scrolling */
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vertical Centering with Flexbox</title>
+    <style>
+        /* Container div */
+        .container {
+            display: flex; /* Use flexbox */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            width: 100%;
+            height: 100vh; /* Set the height to the viewport height */
+            background-color: lightgray;
+        }
+
+        /* Text div */
+        .text {
+            width: 90%;
+            text-align: center; /* Center text horizontally */
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="text">
+            This is vertically centered text.
+        </div>
+    </div>
+</body>
+</html>
