--- a/pro-Pend-sim.html
+++ b/pro-Pend-sim.html
@@ -8,7 +8,7 @@
             </p>
 
 <p>
-    URL:[<a href="https://github.com/anonyosmitra/Pendulum-sim" target="_blank">source</a>]
+    URL:[<a href="https://github.com/anonyosmitra/Pendulum-sim" target="_blank">source</a>]<snap id="pointAnime"></snap>
             </p>
 
 
