--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,11 @@
 
     <ul class="custom-list">#Phone:
 <li>US: <a href="tel:+13602092042">+1 360 209 2042</a></li>
-<li>PL: <a href="tel:+48692425069">+48 692 425 069</a><snap id="pointAnime"></snap></li>
+<li>PL: <a href="tel:+48692425069">+48 692 425 069</a></li>
     </ul>
-
+<p>
+    [<a href="CV-AnonyoMitra.pdf" download="CV-AnonyoMitra.pdf" >Download CV</a>]<snap id="pointAnime"></snap>
+</p>
 <br>
             <br>
             <br>
