--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <li>PL: <a href="tel:+48692425069">+48 692 425 069</a></li>
     </ul>
 <p>
-    [<a href="CV-AnonyoMitra.pdf" download="CV-AnonyoMitra.pdf" >Download CV</a>]<snap id="pointAnime"></snap>
+    [<a href="CV-AnonyoMitra.pdf" download="CV-AnonyoMitra.pdf" >Download CV(English)</a>]|[<a href="CV-Anonyo Mitra PL.pdf" download="CV-Anonyo Mitra PL.pdf" >Download CV(Polish)</a>]<snap id="pointAnime"></snap>
 </p>
 <br>
             <br>
