--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
 <li>PL: <a href="tel:+48692425069">+48 692 425 069</a></li>
     </ul>
 <p>
-    [<a href="CV-AnonyoMitra.pdf" download="CV-AnonyoMitra.pdf" >Download CV(English)</a>]|[<a href="CV-AnonyoMitra-PL.pdf" download="CV-AnonyoMitra-PL.pdf" >Download CV(Polish)</a>]<snap id="pointAnime"></snap>
+    [<a href="CV-AnonyoMitra.pdf" download="CV-AnonyoMitra.pdf" >Download CV(English)</a>]|[<a href="CV-AnonyoMitra-PL.pdf" download="CV-AnonyoMitra-PL.pdf" >Download CV(Polish)</a>]<br>
+    [<a href="CV-AnonyoMitra-ATS.pdf" download="CV-AnonyoMitra-ATS.pdf" >Download CV(ATS friendly version)</a>]<snap id="pointAnime"></snap>
 </p>
 <br>
             <br>
