--- a/home-tab.html
+++ b/home-tab.html
@@ -25,7 +25,7 @@
                 <li>[<a href="pro-untitledGame.html">Strategy Game</a>]: A 2D multiplayer strategy game currently in development.</li>
                 <li>[<a href="pro-mineOfDuty.html">Mine Of Duty</a>]: A Minecraft themed shooting game made using Java AWT framework.</li>
                 </ul>
-            [<a href="projects.html">Click here</a>] to see the full list of projects I have worked on.
+            [<a href="projects-tab.html">Click here</a>] to see the full list of projects I have worked on.
 </p>
 <h3>$myFuture</h3>
 <p>I am eager to take the next step in my software development journey. I am actively seeking opportunities for internships, collaborations, and mentorship to gain practical experience and continue learning from seasoned professionals. I am also open to contributing to open-source projects to give back to the developer community.
