--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
         <div class="terminal-menu">
             <ul>
-                <li onclick="document.getElementById('page').src='home.html'">About Me</li>
-                <li onclick="document.getElementById('page').src='projects.html'">My Projects</li>
-                <li onclick="document.getElementById('page').src='contact.html'">Contact Me</li>
+                <li onclick="document.getElementById('page').src='home-tab.html'">About Me</li>
+                <li onclick="document.getElementById('page').src='projects-tab.html'">My Projects</li>
+                <li onclick="document.getElementById('page').src='contact-tab.html'">Contact Me</li>
             </ul>
         </div>
         <div class="terminal-body">
-            <iframe id="page" src="home.html"></iframe>
+            <iframe id="page" src="home-tab.html"></iframe>
 
         </div>
     </div>
