--- a/downloads.html
+++ b/downloads.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
         <div class="terminal-body">
-            <iframe id="page" src="contact-tab.html"></iframe>
+            <iframe id="page" src="downloads-tab.html"></iframe>
 
         </div>
     </div>
