--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <ul>
                 <li onclick="document.getElementById('page').src='home-tab.html'">About Me</li>
                 <li onclick="document.getElementById('page').src='projects-tab.html'">My Projects</li>
+                <li onclick="document.getElementById('page').src='downloads-tab.html'">Downloads</li>
                 <li onclick="document.getElementById('page').src='contact-tab.html'">Contact Me</li>
             </ul>
         </div>
