--- a/contact-tab.html
+++ b/contact-tab.html
@@ -4,15 +4,11 @@
 <body onload="startPointerAnimation()">
 <h3>$contact</h3>
 <p>[<a href="https://github.com/anonyosmitra" target="_blank">Github</a>]|[<a href="https://www.linkedin.com/in/anonyo-shanker-mitra-77466b19a/" target="_blank">LinkedIn</a>]|[<a href="mailto:anonyos.mitra@gmail.com">Email</a>]<br></p>
-
+<img src="qrCode.png"/>
     <ul class="custom-list">#Phone:
 <li>US: <a href="tel:+13602092042">+1 360 209 2042</a></li>
-<li>PL: <a href="tel:+48692425069">+48 692 425 069</a></li>
+<li>PL: <a href="tel:+48692425069">+48 692 425 069</a><snap id="pointAnime"></snap></li>
     </ul>
-<p>
-    [<a href="CV-AnonyoMitra.pdf" download="CV-AnonyoMitra.pdf" >Download CV(English)</a>]|[<a href="CV-AnonyoMitra-PL.pdf" download="CV-AnonyoMitra-PL.pdf" >Download CV(Polish)</a>]<br>
-    [<a href="CV-AnonyoMitra-ATS.pdf" download="CV-AnonyoMitra-ATS.pdf" >Download CV(ATS friendly version)</a>]<snap id="pointAnime"></snap>
-</p>
 <br>
             <br>
             <br>
