--- a/projects-tab.html
+++ b/projects-tab.html
@@ -8,6 +8,7 @@
     <li><a href="pro-untitledGame.html">Strategy Game</a></li>
     <li><a href="pro-mineOfDuty.html">Mine Of Duty</a></li>
     <li><a href="pro-CreatureBattleGame.html">Creature Battle Game</a></li>
+    <li><a href="pro-WeatherScrapper.html">Weather Scrapper</a></li>
     <li><a href="pro-L-System-Sim.html">L-System Simulation</a></li>
     <li><a href="pro-stringEq.html">String Equation</a></li>
     <li><a href="pro-earth-moon-sim.html">Earth-Moon Model Simulator</a></li>
